
2018-02-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_get_long_long, cb_get_u_long_long): fix bug #492
	  adjusted literal size check

2018-02-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c, tree.h [COB_TREE_DEBUG]: make sure that we don't enter
	  a loop of cb_tree cast errors, possible as (cb_name) is called
	  which may result in another call of (cobc_tree_cast_error);
	  removed compiler specific handling
	* cobc.c (cobc_abort_terminate): add parameter indicating that
	  the user should report the error

2018-01-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c: postponed check for dangling LINKAGE items
	  from entry point generation to program validation, allowing to
	  only warn items that are actually in use, checked in new
	  function (has_sub_reference)
	* cobc.c (process_filename): set internal filename before checking
	  for valid name to get better error messages

2018-01-25  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c (default_reserved_words_list): no longer assumed to be
	  sorted - this caused hard to understand errors when it
	  wasn't. (initialize_reserved_words_if_needed) now sorts it.

2018-01-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c: added ACUCOBOL synonyms FLOAT -> FLOAT-SHORT,
	  DOUBLE -> FLOAT-LONG

2018-01-23  Ron Norman <rjn@inglenet.com>

	* tree.c: fixed coding error to use CB_FIELD_PTR
	* codegen.c, typeck.c: changed to use CB_FIELD_PTR as needed

2018-01-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: use position of last section when defining an implicit
	  paragraph
	* typeck.c (cb_build_identifier): adjusted debug checks for
	  EC-PROGRAM-ARG-OMITTED and EC-DATA-PTR-NULL
	* typeck.c: minor code refactoring

2018-01-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codgen.c (output_internal_function): don't clear sticky-linkage pointers
	  when program has CHAINING